objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABCRating__c</fullName>
        <inlineHelpText>Please indicate the (potential) customer classification. A (high), B (medium), C (low) annual turnover.</inlineHelpText>
        <label>ABC-Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ABCRating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountIdCs__c</fullName>
        <formula>Id &amp;
MID( 
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
MIN(FIND(MID(Id, 5, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
MIN(FIND(MID(Id, 4, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
MIN(FIND(MID(Id, 3, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
MIN(FIND(MID(Id, 2, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
MIN(FIND(MID(Id, 1, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
1) &amp; 
MID( 
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
MIN(FIND(MID(Id, 10, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
MIN(FIND(MID(Id, 9, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
MIN(FIND(MID(Id, 8, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
MIN(FIND(MID(Id, 7, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
MIN(FIND(MID(Id, 6, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
1) &amp; 
MID( 
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
MIN(FIND(MID(Id, 15, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
MIN(FIND(MID(Id, 14, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
MIN(FIND(MID(Id, 13, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
MIN(FIND(MID(Id, 12, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
MIN(FIND(MID(Id, 11, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
1)</formula>
        <label>Account Id (Case-safe)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlphaName__c</fullName>
        <label>Alpha Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <label>Annual Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AnnualRevenue</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AverageOrderValue__c</fullName>
        <label>Average Order Value</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BgcCoatingsId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Coatings</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Coatings &amp; Construction</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Customer)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Coatings - Accounts</relationshipLabel>
        <relationshipName>AccountBGCCoatings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcFoodId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Food</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Customer)</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Food</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Accounts (BGC Food)</relationshipLabel>
        <relationshipName>AccountBGCFood</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcHomeCareId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Home Care and I&amp;I</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Home Care and I&amp;I</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Customer)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Accounts (Home Care)</relationshipLabel>
        <relationshipName>AccountBGCProductHomeCare</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcLubricantsId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Lubricants</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Lubricants</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Customer)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Accounts (BGC Lubricants)</relationshipLabel>
        <relationshipName>AccountBGCLubricants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcOtherId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Other</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Other Specialties</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Customer)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Accounts (BGC Other)</relationshipLabel>
        <relationshipName>AccountBGCOther</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcPersonalCareId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Personal Care</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Customer)</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Personal Care</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Accounts (BGC Personal Care)</relationshipLabel>
        <relationshipName>AccountBGCPersonalCare</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcPharmaceuticals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Pharmaceuticals</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Pharmaceuticals</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Customer)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Accounts (BGC Pharmaceuticals)</relationshipLabel>
        <relationshipName>AccountBGCPharmaceuticals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcPlasticsId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Advanced Materials</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Customer)</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Advanced Materials</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Accounts (BGC Plastics)</relationshipLabel>
        <relationshipName>AccountBGCPlastics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BgcSynthesisId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BGC Synthesis</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Customer)</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Purpose__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>BusinessGroupClassification__c.Lob1__c</field>
                <operation>equals</operation>
                <value>Synthesis</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Account (BGC Synthesis)</relationshipLabel>
        <relationshipName>AccountBGCSynthesis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingCountryLabel__c</fullName>
        <label>Postal Country Label</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoAEmailAddress__c</fullName>
        <label>CoA Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CoatingsConstruction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coatings &amp; Construction</label>
        <lookupFilter>
            <active>false</active>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Coatings &amp; Construction - Accounts</relationshipLabel>
        <relationshipName>Coatings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompanyRegNo__c</fullName>
        <label>Company Reg. No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondenceLanguage__c</fullName>
        <description>Preferred language for this Account</description>
        <label>Correspondence Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditLimit__c</fullName>
        <label>Credit Limit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomizedAccountName__c</fullName>
        <label>Customized Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <description>The DUNS number is a unique nine-digit identifier for businesses. This is often used by finance for credit checks etc.
See http://www.dnb.com/duns-number.html for reference</description>
        <inlineHelpText>The DUNS number is a unique nine-digit identifier for businesses.</inlineHelpText>
        <label>DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErpAccountNumber__c</fullName>
        <description>Show account number in one field, regardless of source field LERP/GERP/JDE
Gaurav 21 Jan: If none of LERP/GERP/JDE is available then Integration Id is populated</description>
        <formula>IntegrationId__c</formula>
        <label>ERP Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormerlyKnownAs__c</fullName>
        <label>Formerly Known As</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FrequencyOfDemand__c</fullName>
        <label>Frequency of Demand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FrequencyOfVisits__c</fullName>
        <label>Frequency of Visits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FunctionalArea__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FunctionalArea</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeneralEmailAddress__c</fullName>
        <label>General Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HelixId__c</fullName>
        <externalId>true</externalId>
        <label>HelixId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBANNumber__c</fullName>
        <label>IBAN Number</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMCDCompany__c</fullName>
        <inlineHelpText>This value will be set based on the IMCD Company of your User.</inlineHelpText>
        <label>IMCD Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IMCDCompany</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImcdBusinessUnit__c</fullName>
        <description>Stores the Business Unit, dependant on the Company.</description>
        <label>IMCD Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IMCDBusinessUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntegrationId__c</fullName>
        <externalId>true</externalId>
        <label>IntegrationId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Intercompany__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for Suppliers indicating inter-company. Flag is used in Price Books Entries.</description>
        <label>Intercompany</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvoiceCity__c</fullName>
        <description>ERP Invoice To</description>
        <label>Invoice City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceCountry__c</fullName>
        <label>Invoice Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinalCountries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvoiceEmailAddress__c</fullName>
        <label>Invoice Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>InvoiceGeo__c</fullName>
        <description>ERP Invoice To Field</description>
        <label>Invoice Geo</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>InvoicePostalCode__c</fullName>
        <description>ERP Invoice To Field</description>
        <label>Invoice Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceState__c</fullName>
        <description>ERP Invoice To Field</description>
        <label>Invoice State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceStreet__c</fullName>
        <description>ERP Invoice To Field</description>
        <label>Invoice Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JdeId__c</fullName>
        <externalId>true</externalId>
        <label>JDE Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastVisitDate__c</fullName>
        <label>Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyInformation__c</fullName>
        <description>This field is used for legacy information for migration
example: re-parenting Opportunities for Lomas</description>
        <label>Legacy Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LobClassifications__c</fullName>
        <formula>SUBSTITUTE( 
    IF(NOT(ISBLANK(Text(Primary_LOB1__c))), Text(Primary_LOB1__c), NULL) + 
    IF(NOT(ISBLANK(Text(Primary_LOB2__c))), &quot; / &quot; + Text(Primary_LOB2__c) , NULL) + 
    IF(NOT(ISBLANK(Text(Primary_LOB3__c))), &quot; / &quot; + Text(Primary_LOB3__c), NULL),
&quot;&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lob Classifications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalErpId__c</fullName>
        <description>Field storing External Unique Id from a non-group ERP system</description>
        <externalId>true</externalId>
        <label>Local ERP Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LockedForIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating when a Prospect has been sent for Integration. When Checkbox is set, Validation rules define update behavior on certain fields.</description>
        <inlineHelpText>When this box is checked, the record is locked and certain fields cannot be edited</inlineHelpText>
        <label>Locked for Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MissingCountry__c</fullName>
        <formula>AND ( 
   ISBLANK(TEXT(ShippingCountryCode))
   , RecordType.DeveloperName = &apos;Customer_Sold_To&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MissingCountry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoOfEmployees__c</fullName>
        <label>No. of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NoOfEmployees</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumShipToAddresses__c</fullName>
        <label>Number Ship-to Addresses</label>
        <summaryForeignKey>AccountShiptoAddress__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderAcknowledgementEmailAddress__c</fullName>
        <label>Order Acknowledgement Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTerm__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Payment</fullName>
                </value>
                <value>
                    <fullName>As Current</fullName>
                </value>
                <value>
                    <fullName>COD (Cash on delivery)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
                <value>
                    <fullName>8 days net</fullName>
                </value>
                <value>
                    <fullName>10 days net</fullName>
                </value>
                <value>
                    <fullName>14 days net</fullName>
                </value>
                <value>
                    <fullName>15 days net</fullName>
                </value>
                <value>
                    <fullName>30 days net</fullName>
                    <default>true</default>
                    <label>30 days net</label>
                </value>
                <value>
                    <fullName>45 days net</fullName>
                </value>
                <value>
                    <fullName>60 days net</fullName>
                </value>
                <value>
                    <fullName>90 days net</fullName>
                </value>
                <value>
                    <fullName>150 days net</fullName>
                </value>
                <value>
                    <fullName>20 days month end</fullName>
                </value>
                <value>
                    <fullName>30 days month end</fullName>
                </value>
                <value>
                    <fullName>45 days month end</fullName>
                </value>
                <value>
                    <fullName>60 days month end</fullName>
                </value>
                <value>
                    <fullName>120 days month end</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PharmaTags__c</fullName>
        <description>Used by Pharma to tag Customers with Catchwords</description>
        <label>Pharma Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PharmaTags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlannedTurnoverperyear__c</fullName>
        <label>Planned Turnover (per year)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreferredCurrency__c</fullName>
        <label>Preferred Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>CSD</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>DZD</fullName>
                </value>
                <value>
                    <fullName>EEK</fullName>
                </value>
                <value>
                    <fullName>EGP</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HRK</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KES</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>MAD</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>RON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryLOB1Text__c</fullName>
        <formula>TEXT(Primary_LOB1__c)</formula>
        <label>PrimaryLOB1Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryLOB2Text__c</fullName>
        <formula>TEXT(Primary_LOB2__c)</formula>
        <label>PrimaryLOB2Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryLOB3Text__c</fullName>
        <formula>TEXT(Primary_LOB3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PrimaryLOB3Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_LOB1__c</fullName>
        <label>Primary LOB1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_LOB2__c</fullName>
        <label>Primary LOB2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_LOB3__c</fullName>
        <label>Primary LOB3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductionVolume__c</fullName>
        <label>Annual Production Volume</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsftId__c</fullName>
        <externalId>true</externalId>
        <label>PSFT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Determines the region based on the country.</description>
        <formula>IF(ISBLANK(ShippingCountry), &quot;&quot;, 

IF(CONTAINS(&quot;AD:AE:AL:AM:AO:AT:AX:AZ:BA:BE:BF:BG:BH:BI:BJ:BV:BW:BY:CD:CF:CG:CG:CH:CI:CM:CV:CY:CZ:DE:DJ:DK:DZ:EE:EG:EH:ER:ES:ET:FI:FO:FR:FR:GA:GB:GE:GF:GG:GH:GI:GL:GM:GN:GQ:GR:GW:HR:HU:IE:IL:IM:IQ:IR:IS:IT:JE:JO:KE:KG:KM:KW:KZ:LB:LI:LR:LS:LT:LU:LV:LY:MA:MC:MD:ME:MG:MK:ML:MR:MT:MU:MW:MZ:NA:NE:NG:NL:NO:OM:PK:PL:PS:PT:QA:RE:RO:RS:RU:RW:SA:SC:SD:SE:SH:SI:SJ:SK:SL:SM:SN:SO:SS:ST:SZ:TD:TG:TJ:TM:TN:TR:TZ:UA:UG:UZ:VA:YE:YT:ZA:ZM:ZW&quot;, ShippingCountry), &quot;EMEA&quot;, 

IF(CONTAINS(&quot;AF:AQ:AU:AZ:BD:BH:BN:BT:CC:CK:CN:CX:CY:FJ:GE:GU:HK:HM:ID:IN:IO:JP:KG:KH:KI:KP:KR:KW:KZ:LA:LK:MH:MM:MN:MO:MP:MV:MY:NC:NF:NP:NR:NU:NZ:PF:PG:PH:PN:PW:QA:SB:SG:SY:TF:TH:TK:TL:TO:TV:TW:VN:VU:WF:WS&quot;, ShippingCountry), &quot;APAC&quot;, 

IF(CONTAINS(&quot;AG:AI:AR:AW:BB:BL:BM:BO:BQ:BR:BS:BZ:CA:CL:CO:CR:CU:CW:DM:DO:EC:FK:GD:GP:GS:GT:GY:HN:HT:JM:KN:KY:LC:MF:MQ:MS:MX:NI:PA:PE:PM:PR:PY:SR:SV:SX:TC:TT:US:UY:VC:VE:VG:VI&quot;, ShippingCountry), &quot;AMERICAS&quot;, 

NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevenueCurrency__c</fullName>
        <label>Revenue Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDSEmailAddress__c</fullName>
        <label>SDS Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SRNumber__c</fullName>
        <label>SR Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SearchResult__c</fullName>
        <formula>ShippingCity  &amp; &apos; ᛫ &apos; &amp;  TEXT(ImcdBusinessUnit__c)</formula>
        <label>Search Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfManagedAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field when set means the Account was created by a user with the SfManagedAccounts permission. It means the Account has not been integrated and is managed from within Salesforce only.</description>
        <label>SF-Managed Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShippingCountryLabel__c</fullName>
        <label>Main Country label</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Not Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supply_Chain_Comments__c</fullName>
        <inlineHelpText>This field is to capture warehouse information on the sold-to account</inlineHelpText>
        <label>Supply Chain Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>